--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
         <link rel="stylesheet" href="style.css">
+        <title>Video</title>
     </head>
     <body>
+        <section class="sec">
+            <div style="text-align:center;" >
+            <video src="content/video/humo.mp4" autoplay muted> </video></div>
+            <h1>
+                <span>I</span>
+                <span>N</span>
+                <span>T</span>
+                <span>E</span>
+                <span>R</span>
+                <span>F</span>
+                <span>A</span>
+                <span>C</span>
+                <span>E</span>
+                <span>S</span>
+
+            </h1>
+        </section>
+    </body>
+</html>
